# Gaussian-Denoiser

./: .gitignore  CHANGELOG.md  Makefile  README.md  check_data.sh  data.sh  download_data.sh  environment.yml  evaluate_sisr_ssim.py  main.ipynb  main.ju.py  main.py  plot_training_results.py  pyproject.toml  results.ipynb  results.py  unit_test.py
Training results/: DnCNN-B-50epochs.csv  DnCNN-S-50epochs.csv  dncnn_B_30epochs.pt  dncnn_B_50epochs.pt  dncnn_S_sigma25_30.pt  dncnn_S_sigma25_50epochs.pt
denoiser/: __init__.py  dataset.py  inference.py  model.py  train.py  utils.py
dncnn/: __init__.py  datasets.py  inference.py  models.py  train.py  utils.py
models/3/: model_015.pth  model_050.pth
models/b/: model_050.pth
models/cb/: model_050.pth
models/s/: model_050.pth
tests/: test_dataset.py  test_utils.py
