[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "scikit-image>=0.25.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
]

[tool.pyright]
typeCheckingMode = "off"
